[gd_scene load_steps=2 format=3 uid="uid://spacegameui"]

[ext_resource type="Script" path="res://SpaceGameUI.gd" id=1]

[node name="SpaceGameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="HUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -20.0

[node name="HealthBar" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = -25.0
offset_right = 50.0
offset_bottom = -5.0
text = "Health"
horizontal_alignment = 1

[node name="EnergyBar" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 25.0
offset_bottom = 45.0
value = 100.0
show_percentage = false

[node name="EnergyLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 0.0
offset_right = 50.0
offset_bottom = 20.0
text = "Energy"
horizontal_alignment = 1

[node name="ExperienceBar" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 70.0
value = 0.0
show_percentage = false

[node name="ExperienceLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 25.0
offset_right = 50.0
offset_bottom = 45.0
text = "Experience"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 75.0
offset_right = 50.0
offset_bottom = 95.0
text = "Level 1"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 100.0
offset_right = 50.0
offset_bottom = 120.0
text = "Space Explorer"
horizontal_alignment = 1

[node name="InventoryPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
visible = false

[node name="InventoryTitle" type="Label" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
text = "Space Inventory"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
offset_bottom = -30.0

[node name="GridContainer" type="GridContainer" parent="InventoryPanel/ScrollContainer"]
layout_mode = 2
columns = 2

[node name="CloseButton" type="Button" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -10.0
text = "Close"

[node name="BuildingPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
visible = false

[node name="BuildingTitle" type="Label" parent="BuildingPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
text = "Space Building Menu"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="BuildingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
offset_bottom = -30.0

[node name="GridContainer" type="GridContainer" parent="BuildingPanel/ScrollContainer"]
layout_mode = 2
columns = 2

[node name="CloseButton" type="Button" parent="BuildingPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -10.0
text = "Close"

[node name="CompanionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
visible = false

[node name="CompanionTitle" type="Label" parent="CompanionPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
text = "Alien Companions"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CompanionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
offset_bottom = -30.0

[node name="VBoxContainer" type="VBoxContainer" parent="CompanionPanel/ScrollContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="CompanionPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -10.0
text = "Close"

[node name="UpgradePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
visible = false

[node name="UpgradeTitle" type="Label" parent="UpgradePanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
text = "Space Upgrade Station"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="UpgradePanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -10.0
text = "Close"

[node name="TransformationPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
visible = false

[node name="TransformationTitle" type="Label" parent="TransformationPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
text = "Alien Transformation Lab"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="TransformationPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -10.0
text = "Close"
